More fixes and changes
Look at the example opened on browser and learn
how to do the scrollbar thing.

--- a/style.css
+++ b/style.css
@@ -18,6 +18,10 @@ button {
     height: 48px;
 }
 
+#zero {
+    width: 100px;
+}
+
 .input {
     width: 100%;
     height: 40px;
@@ -27,7 +31,7 @@ button {
     align-items: center;
     padding: 0 12px;
     justify-content: flex-end;
-    overflow: hidden;
+    overflow: auto;
 }
 
 .container {
@@ -80,3 +84,10 @@ button {
 #equal, #clear {
     flex: 1;
 }
+
+.disabled {
+    
+}
+
+/* plans:
+use disabled to disbale numbers when too many digits
